# lexical-loro

./: .gitignore  .licenserc.yaml  CLI_MIGRATION.md  CLI_STEP5_UPDATE.md  INITIAL_CONTENT_FIX.md  LICENSE  Makefile  NODETYPE_IMPLEMENTATION.md  README.md  SIMPLIFICATION_SUMMARY.md  STEP1_COMPLETE.md  STEP2_COMPLETE.md  STEP5_IMPLEMENTATION.md  STEP6_IMPLEMENTATION.md  debug_container_test.py  debug_loro_updates.py  dropdown_options.css  eslint.config.js  index.html  jest.config.json  package-lock.json  package.json  pyproject.toml  requirements.txt  test-debug.html  test_client_id_correlation.py  test_direct_init.py  test_insert_fix.py  test_mcp_insert.py  test_mcp_tools.py  test_sync_fix.py  test_tree_api.py  test_ui_append_no_crash.py  test_websocket_debug.py  tsconfig.app.json  tsconfig.eslint.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  (+4 more)
__tests__/: setup.ts  test_BigLoroDoc.ts  test_LexicalNodeData.ts  test_LoroDoc.ts  test_LoroXmlText.ts  test_XmlText.ts
dev/: README.md  debug-offset.js  debug_loro_api.py  debug_loro_map.py  debug_mcp_comprehensive.py  debug_tree.py  debug_tree_structure.py  debug_websocket_integration.py  ephemeral_integration.py  node-server.ts  simple_server.py
docs/: API.md  ARCHITECTURE.md  CURRENT_DOCUMENT.md  DEVELOPMENT.md  EXAMPLES.md  ID_DISAMBIGUATION.md  INITIALIZATION.md  INITIALIZATION_GUIDE.md  LEXICAL_MODEL.md  LEXICAL_MODEL_GUIDE.md  PERFORMANCE.md  README.md  USAGE_EXAMPLES.md  V2_ARCHITECTURE.md
esm/: index.html  index.mjs  prepopulatedRichText.mjs  styles.css
examples/: README.md  collaboration_example.py  file_sync_example.py  loro_model_example.py  memory_only_example.py
lexical_loro/: __init__.py  cli.py  cli_minimal.py  server.py  server_minimal.py  server_simplified.py  server_step5.py  serverv2.py  simplified_server.py  websocket_server.py
node-js/: server.ts
nodes/: README.md  package.json  server.cjs  tsconfig.json  types.ts  vite.config.ts
servers/: README.md  server.py  server.ts
split/: index.html
src/: App.tsx  CollaborativeEditor.tsx  CounterComponent.tsx  CounterNode.tsx  DiffMerge.ts  Editor.tsx  LexicalCollaborativeEditor.css  LexicalCollaborativeEditor.tsx  LexicalModel.ts  LexicalToolbar.tsx  LoroCollaborationContext.ts  LoroCollaborationPlugin.tsx  LoroCollaborationPluginV1.tsx  LoroCollaborationPluginV2.tsx  LoroCollaborativePlugin.tsx  LoroCollaborativePlugin0.tsx  LoroCollaborativePluginV2.tsx  LoroCollaborativePluginV3.tsx  ServerSelector.css  Settings.tsx  TextAreaCollaborativeEditor.tsx  appSettings.ts  collaboration.ts  cursors.tsx  demo.tsx  index.css  index.ts  index.tsx  setupEnv.ts  stableNodeState.ts  stablePositioning.ts  tyes.dt.ts  types.ts  useLoroCollaboration.tsx  vite-env.d.ts
state/: CLEAN_PLUGIN_README.md  INCREMENTAL_UPDATE_FIX.md  PLUGIN_COMPARISON.md  PROMPT.md  index-cursor-test.html  index-test-demo.html  setup-python.sh
tests/: DOCUMENT_ISOLATION_TESTS.md  __init__.py  showcase_loro_model.py  test_actions.py  test_append_paragraph.py  test_append_paragraph_broadcast.py  test_change_tracking.py  test_client_disconnect.py  test_client_id_correlation.py  test_client_registration.py  test_client_update.py  test_concurrent_changes.py  test_container_id.py  test_container_logic.py  test_container_logic_consistency.py  test_current_document.py  test_direct_init.py  test_document_direct.py  test_document_isolation.py  test_document_management.py  test_document_manager.py  test_ephemeral.py  test_ephemeral_events.py  test_ephemeral_simple.py  test_event_system.py  test_fine_grained_diff.py  test_fixed_mcp.py  test_incremental_blocks.py  (+48 more)
(+536 files in other folders)
